0032232: Draw Harness - make Tk dependency optional